--- a/actividad.ipynb
+++ b/actividad.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "338e5aee",
+   "id": "42807698",
    "metadata": {},
    "outputs": [
     {
@@ -24,105 +24,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "ede176c1",
+   "execution_count": 1,
+   "id": "6d91b4fd",
    "metadata": {},
    "outputs": [],
    "source": [
     "import fitz\n",
-    "import re"
+    "import re\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "dc55f721",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Deprecation: 'getText' removed from class 'Page' after v1.19 - use 'get_text'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pdf = '2.pdf'\n",
+    "doc = fitz.open(pdf)\n",
+    "salida = open(\"2\"+\".txt\",\"wb\") \n",
+    "for pagina in doc:\n",
+    "    texto = pagina.getText().lower().encode(\"utf8\")\n",
+    "    salida.write(texto)\n",
+    "    salida.write(b\"\\n-----\\n\")\n",
+    "\n",
+    "salida.close()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "803edfc0",
+   "id": "30a42be2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pdf = \"2.pdf\"\n",
-    "doc = fitz.open(pdf)"
+    "import re\n",
+    "#debe estar en minuscula en texto\n",
+    "with open('2.txt', 'r', encoding=\"utf8\") as f:\n",
+    "    lineas = [linea.split() for linea in f]\n",
+    "\n",
+    "lineas_unidas = []\n",
+    "for i in range(len(lineas)):\n",
+    "    lineas_unidas += lineas[i]\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d84d919a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "paginas:  1\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"paginas: \", doc.pageCount)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 129,
-   "id": "7da858c6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2. tasa de filtración glomerular (tfg): 34.0 - observación: disminución moderada del filtrado glomerular. insuficiencia renal por ckd epi \\nfecha de realización: 26/07/2019 00:00:00 \\n1. glicemia basal (mg/dl): 104.0. \\nanálisis y plan de atención \\npaciente con antecednet de tumor renal en seguimiento por especialistas en bogota queines siolcitiador \\nrnm de \\nabdomen pero aun no ha sido posible se encuentr a normotenso con pesima adhrencia a al diet a ejercicio \\nobeso con \\naumento depeso casi en dos kg y en en cifras de triglcieriedos y niveles de glucosa en prediabess se \\nestadio renal 3b \\ncon tfg en 39.1 por ckcepi con descenso con respeicto a estaddio posterior pues tenia tfg en 42.7 reisgo \\ncardiovascular 15% por framingham se insite en que debe dejar alimentos nefrotoxicos. control en tres \\nmeses. se da \\norden para valoracion por nefrologia y orientacion nutricionales por enfermeria contro con nueva \\ncreatinina \\ndiagnóstico \\ndiagnostico \\ndiagnóstico principal: hipertension esencial (primaria) (i10x), confirmado repetido, causa externa:otra . \\ndiagnóstico asociado 1: hiperlipidemia no especificada (e785), confirmado repetido. \\ndiagnóstico asociado 2: insuficiencia renal cronica, no especificada (n189), confirmado repetido. \\ndiagnóstico asociado 3: obesidad, no especificada (e669), confirmado repetido. \\ndiagnóstico asociado 4: trastorno del metabolismo de los carbohidratos, no especificado (e749), confirmado repetido. \\ndiagnóstico asociado 5: tumor maligno del riñon, excepto de la pelvis renal (c64x), izquierdo (a), confirmado repetido. \\nplan de manejo - formulacion de medicamentos \\nfórmula médica - uso continuo \\n1. hidroclorotiazida tab 25mg: tomar (vía oral) 1 tableta cada 1 día(s) por 90 día(s). cantidad total: 90, número de entregas: 3, vigencia del \\ntratamiento: \\n16/03/2020- 14/06/2020, \\n2. losartan 50 mg tab: tomar (vía oral) 1 tableta cada 12 hora(s) por 90 día(s). cantidad total: 180, número de entregas: 3, vigencia del \\ntratamiento: \\n16/03/2020- 14/06/2020, \\nplan de manejo - ordenes de procedimientos \\nordenes de procedimientos \\n1. se solicita creatinina en suero u otros fluidos, no. 1, paciente con antecednet de tumor renal en \\nseguimiento por \\nespecialistas en bogota queines siolcitiador rnm de abdomen pero aun no ha sido posible se encuentr a \\nnormotenso \\ncon pesima adhrencia a al diet a ejercicio obeso con aumento depeso casi en dos kg y en en cifras de \\ntriglcieriedos y \\nniveles de glucosa en prediabess se estadio renal 3b con tfg en 39.1 por ckcepi con descenso con respeicto \\na estaddio \\nposterior pues tenia tfg en 42.7 reisgo cardiovascular 15% por framingham se insite en que debe dejar \\nalimentos \\nnefrotoxicos. control en tres meses. se da orden para valoracion por nefrologia y orientacion \\nnutricionales por \\nenfermeria contro con nueva creatinina \\ndiagnóstico. \\nplan de manejo - referencia - interconsulta - remisión \\ninterconsulta \\n1. se solicita interconsulta a nefrologia por solicitud del médico tratante. justificación: paciente de 71 años con antecednte de \\ntumor renal \\nizquierdo en contorl con urologia en quein se aprecia deterioro marcado de funcion renal desde tfg en 42. \\nhasta 39.1 \\ncon ultima creatinina en 1.7 ss valoracion . observaciones: paciente de 71 años con antecednte de tumor renal \\nizquierdo \\n'"
-      ]
-     },
-     "execution_count": 129,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pag = doc.loadPage(0)\n",
-    "txt = pag.getText(\"text\").lower()\n",
-    "txt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "483269ea",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "str"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(txt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "0835b178",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#guardar txt\n",
-    "text_file = open(\"doc.txt\", \"w\")\n",
-    "text_file.write(txt)\n",
-    "text_file.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 292,
-   "id": "4527f9eb",
+   "id": "4f5d63da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,30 +93,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
-   "id": "01b69bf4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "salida = []\n",
-    "with open('doc.txt', 'r') as f:\n",
-    "    lineas = [linea.split() for linea in f]\n",
-    "\n",
-    "# Guardando en una lista el documento\n",
-    "lineas_unidas = []\n",
-    "for i in range(len(lineas)):\n",
-    "    lineas_unidas += lineas[i]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 264,
-   "id": "b54bb1fb",
+   "execution_count": 5,
+   "id": "54059fd1",
    "metadata": {},
    "outputs": [],
    "source": [
     "def finder(x):\n",
-    "    \n",
     "    for i in range(len(lineas)):\n",
     "        try:\n",
     "            return i,lineas[i].index(x)\n",
@@ -168,8 +108,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
-   "id": "ed2d8b01",
+   "execution_count": 6,
+   "id": "24520bcc",
    "metadata": {
     "scrolled": true
    },
@@ -179,19 +119,35 @@
      "output_type": "stream",
      "text": [
       "[34.0]\n",
-      "['POR CKD EPI']\n",
+      "['ckd epi']\n",
       "['26/07/2019']\n",
       "['15%']\n",
-      "POR FRAMINGHAM\n"
+      "['cardiovascular ', 'por framingham']\n"
      ]
     }
    ],
    "source": [
     "neighborhood_1 = lineas[finder('glomerular')[0]][finder('glomerular')[1]:finder('glomerular')[1]+4] \n",
     "neighborhood_2 = lineas[finder('renal')[0]][finder('renal')[1]:finder('renal')[1]+4] \n",
-    "if(neighborhood_2!=\"\"):neighborhood_3 = lineas[finder('Fecha')[0]][finder('Fecha')[1]:finder('Fecha')[1]+4] \n",
-    "neighborhood_4 = lineas[finder('CARDIOVASCULAR')[0]][finder('CARDIOVASCULAR')[1]:finder('CARDIOVASCULAR')[1]+4]   \n",
-    "neighborhood_5 = lineas[finder('CARDIOVASCULAR')[0]][finder('CARDIOVASCULAR')[1]:finder('CARDIOVASCULAR')[1]+4]   \n",
+    "if(neighborhood_2!=[]):neighborhood_3 = lineas[finder('fecha')[0]][finder('fecha')[1]:finder('fecha')[1]+4] \n",
+    "\n",
+    "\n",
+    "# ----- para riesgo ------\n",
+    "#Establecer las variantes o formas de escribir riesgo    \n",
+    "myDict = {'riesgo':1, 'reisg':1,'risk':1,'reisgo':1,'riak':1,'reisg':1}    \n",
+    "\n",
+    "#Determinar posición de las palabras riesgo o similares\n",
+    "posiciones_riesgo = [index for index, word in enumerate(lineas_unidas) if word in myDict]\n",
+    "\n",
+    "#Determinar cuales o cuales con las siguiente palabras despues de las palabras riesgo \n",
+    "posicion_cardio = [lineas_unidas[i] for i in list(map(lambda x: x+1, posiciones_riesgo))]\n",
+    "\n",
+    "#\"vecinos superiores (4 palabras)\" de la palabra cardiovascular que precede a la palabra riesgo o similar.\n",
+    "neighborhood_4 = lineas_unidas[posiciones_riesgo[(posicion_cardio.index(\"cardiovascular\"))]:\n",
+    "                               posiciones_riesgo[(posicion_cardio.index(\"cardiovascular\"))]+4] \n",
+    "    \n",
+    "\n",
+    "neighborhood_5 = lineas[finder('cardiovascular')[0]][finder('cardiovascular')[1]:finder('cardiovascular')[1]+4]   \n",
     "\n",
     "    \n",
     "#Encontrar el número\n",
@@ -202,38 +158,36 @@
     "frase_5 = \" \".join(neighborhood_5)\n",
     "\n",
     "s1 = [float(s) for s in re.findall(r'-?\\d+\\.?\\d*',frase_1)]\n",
-    "s2 = [s2 for s2 in re.findall(r'[A-Z][ ^A-Z]*',frase_2)]\n",
+    "s2 = [s for s in re.findall(r'[^renal ][^por ][ ^a-z]*',frase_2)]\n",
     "s3 = [s for s in re.findall(r'\\d{2}/\\d{2}/\\d{4}',frase_3)]\n",
     "s4 = [s for s in re.findall(r'-?\\d+\\%*',frase_4)]\n",
-    "s5 = [s for s in re.findall(r'[A-Z][ ^A-Z]*',frase_5)]\n",
+    "s5 = [s for s in re.findall(r'[a-z][ ^a-z]*',frase_5)]\n",
     "\n",
     "\n",
     "print(s1)\n",
     "print(s2)\n",
     "print(s3)\n",
     "print(s4)\n",
-    "print(s5[1])"
+    "print(s5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
-   "id": "7640e4ce",
+   "execution_count": 7,
+   "id": "c1f698c3",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'Tasa de filtración glomerular': 34.0,\n",
-       " 'Insuficiencia renal': 'POR CKD EPI',\n",
-       " 'Fecha de identificación de insuficiencia renal': '26/07/2019',\n",
-       " 'Riesgo cardiovascular': '15%',\n",
-       " 'Método de cálculo': 'POR FRAMINGHAM'}"
-      ]
-     },
-     "execution_count": 358,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                         Variable           Valor\n",
+      "0                   Tasa de filtración glomerular            34.0\n",
+      "1                             Insuficiencia renal         ckd epi\n",
+      "2  Fecha de identificación de insuficiencia renal      26/07/2019\n",
+      "3                           Riesgo cardiovascular             15%\n",
+      "4                               Método de cálculo  por framingham\n"
+     ]
     }
    ],
    "source": [
@@ -244,7 +198,12 @@
     "    \"Riesgo cardiovascular\": s4[0], \n",
     "    \"Método de cálculo\":s5[1]\n",
     "}\n",
-    "data"
+    "\n",
+    "df= pd.DataFrame(list(data.items()),\n",
+    "                  columns = ['Variable','Valor'])\n",
+    "print(df)\n",
+    "\n",
+    "df.to_excel('df.xlsx')"
    ]
   }
  ],
